--- a/basketball_points_app/android/app/build.gradle
+++ b/basketball_points_app/android/app/build.gradle
@@ -25,7 +25,10 @@ if (flutterVersionName == null) {
 
 android {
     namespace = "com.example.basketball_points_app"
-    compileSdk = flutter.compileSdkVersion
+
+    // ✅ Manually set compileSdk and targetSdk to 34
+    compileSdk = 34
+
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -34,20 +37,18 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.basketball_points_app"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+
+        // ✅ Manually set minSdk and targetSdk
+        minSdk = 21
+        targetSdk = 34
+
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
         }
     }
